added start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple REST API using Node.js and PostgreSQL to calculate EMI (Equated Monthly Installment) with the added option of prepayments or extra EMI payments. The API should return a month-wise breakdown of payments, including how prepayments impact the loan.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
